# web-scraping

./: .gitignore  config.ini  main.py  models.py  pyproject.toml  scraping.py  seeds.py
